--- a/app/src/main/res/layout/fragment_add_restaurant.xml
+++ b/app/src/main/res/layout/fragment_add_restaurant.xml
@@ -31,6 +31,7 @@
             android:layout_width="100dp"
             android:layout_height="0dp"
             android:layout_marginBottom="104dp"
+            android:backgroundTint="#2FFFFFFF"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
